--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -3,6 +3,7 @@
 
 <h2>本文</h2>
 <p><%= @list.body %></p>
+
 <h2>画像</h2>
 <% if @list.image.attached? %>
   <%= image_tag @list.image, size: "300x300" %>
@@ -10,4 +11,7 @@
   <%= image_tag 'no_image', size: "300x300" %>
 <% end %>
 
+<%= image_tag @list.image, size: "300x300" %>
+
 <%= link_to "編集", edit_list_path(@list.id) %>
+<%= link_to "削除", list_path(@list.id), method: :delete, "date-confirm" => "本当に削除しますか？" %>
